@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Credit Pine Mizune explicitly in the docs.
+
+
 0.01     2019-11-17
 
 - First release upon an unsuspecting world.
